[v8] Int16Array.set(array, offset) fails on first execution https://bugs.webkit.org/show_bug.cgi?id=76040

Patch by Ulan Degenbaev <ulan@chromium.org> on 2012-01-11
Reviewed by Kenneth Russell.

* LayoutTests/fast/canvas/webgl/array-set-with-offset-expected.txt: Added.
* LayoutTests/fast/canvas/webgl/array-set-with-offset.html: Added.
* Source/WebCore/bindings/v8/custom/V8ArrayBufferViewCustom.cpp:
* Source/WebCore/bindings/v8/custom/V8ArrayBufferViewCustom.h:

Canonical link: https://commits.webkit.org/92907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104736 268f45cc-cd09-0410-ab3c-d52691b4dbfc